# minix318

./: .gitignore  .gitignore 3  .vscode:c_cpp_properties.json  AGENTS.md  ANALYSIS_REPORT.md  CONSOLIDATION_PROGRESS.md  Doxyfile  MINIX4_RESTRUCTURING_PLAN.md  MINIX4_Simple_Restructure.ps1  Makefile  Makefile.inc  Makefile.unified  README.md  add_source_dirs.sh  affine_channel_demo.c  alloc.c  allocator-call-counts.csv  ato.c  beatty_dag_demo.c  beatty_demo.c  bsd_tree 3.txt  bsd_tree.txt  build.sh  call.c  chan_beatty_rcrs_demo.c  chan_dag_supervisor_demo.c  check_git_blockage.sh  clas.c  classify_files.ps1  clean_status.sh  cloc_c_for_h.def  cppcheck_minix.txt  cppcheck_minix_alloc.txt  cscope.files  dag_demo.c  debug_git_status.sh  exo_stream_demo.c  fbdev_demo.c  fib_big_demo.c  finalize_magic_framework.sh  (+30 more)
minix/: 0.h  11printf.c  Makefile 4.inc  Makefile.fetchgnu  Makefile.modern  README_MINIX4.md  arbitrate.c  bootasm.S  call.c  cap_table.c  capability.h  caplib.h  case.c  chan.h  clock.c  config.h  config_minix4.h  dag.h  ddekit.h  exo_cpu.h  exo_stream.h  initcall.h  inline.h  interrupt.h  iommu_unified.c  iommu_unified.h  ipc.h  ipc_modern.h  kalloc.c  main.c  main_modern.c  memory.c  memory.h  meson.build  mmu_unified.h  msg_queue.h  nstr_graph.c  panic.h  param.h  pgtab.h  (+18 more)
minix/debug/: assert.h  debug.h
minix/device/: iommu.c  pci.h  usb.h
minix/drivers/power/acpi/: Makefile
minix/filesystem/: buf.h
minix/fs/ext2/: link.c
minix/fs/mfs/: link.c
minix/headers/: attribs.h  thread.h  timer.h
minix/include/: arbitrate.h  chan.h  dag.h  door.h  driver.h  exo_ipc.h  exo_irq.h  exokernel.h  fs.h  generic_utils.h  iommu.h  ipc_debug.h  lib.h  libfs.h  machine  math_core.h  mathposix.h  mmu.h  platform.h  process.h  sched.h  spinlock.h  stat.h  streams.h  syscall.h  types.h  uv_spinlock.h  whoami.h  xk_mach.h
minix/include/arch/x86_64/: include
minix/include/libos/: baremetal.h  crypto.h  irq_client.h  lib9p.h  sched.h
minix/include/machine/: ansi.h  limits.h  multiboot.h
minix/include/minix/: callnr.h  capability.h  com.h  const.h  dag.h  ipc.h  ipc_pmsyscalls.h  ipcconst.h  minlib.h  syslib.h  type.h  vm.h  vm_unified.h
minix/include/sys/: null.h
minix/io/: fio.c
minix/ipc/: pipe.c
minix/kernel/: acpi_unified.c  arbitrate.h  asm.h  beatty_dag_stream.c  beatty_sched.c  bootmain.c  cap.c  cap_mem.c  cap_table.c  cap_table.h  capability.c  capnp_helpers.c  capwrap.c  chan.c  chan.h  clock.c  config.h  console.c  cpulocals.c  dag.h  dag_sched.c  debug.c  defs copy.h  door.h  driver.c  driver.h  elf.h  endpoint.c  entryother.S  env.c  exec.c  exo.c  exo.h  exo_cpu 3.h  exo_cpu.c  exo_disk.c  exo_ipc.c  exo_irq.h  exo_mem.h  fastipc.c  (+66 more)
minix/kernel/arch/earm/: arch_clock.c  arch_do_vmctl.c  arch_system.c  do_padconf.c  exception.c  memory.c  pg_utils.c  phys_copy.S  pre_init.c  protect.c  sconst.h  timer.h
minix/kernel/arch/i386/: acpi.c  (+24 more)
minix/kernel/capability/: capability_proof.c  math_syscalls_extended.c
minix/kernel/docs/: IPC_Robustness_Analysis.md  MINIX_Kernel_Refactoring_v0.1-v0.2.md  README.md  Signal_Refactoring_And_SMP_Notes.md  Signal_Refactoring_Verification.md
minix/kernel/include/: acpi_unified.h  cap_rights.h  capability_syscalls.h  clock.h  const.h  debug.h  interrupt.h  ipc.h  k_posix.h  k_spinlock.h  kernel_constants.h  kernel_types.h  ksignal.h
minix/kernel/klib/: kmemory.c  kpanic.c  kstring.c
minix/kernel/minix/: kernel_types.h
minix/kernel/sys/: kassert.h
minix/kernel/system/: do_abort.c  do_clear.c  do_copy.c  do_devio.c  do_diagctl.c  do_endksig.c  do_exec.c  do_exit.c  do_fork.c  do_getksig.c  do_kill.c  do_mcontext.c  do_open_mathematical.c  do_runctl.c  do_safecopy.c  do_schedctl.c  do_setalarm.c  do_setgrant.c  do_settime.c  do_sigreturn.c  do_sigsend.c  do_statectl.c  do_stime.c  do_times.c  do_trace.c  do_umap.c  do_update.c  do_update_epoch.c  do_vdevio.c  do_vmctl.c  do_vumap.c  test_do_abort.c  test_do_clear.c  test_do_diagctl.c
minix/kernel/templates/: klib_function_template.c
minix/kernel/tests/: test_spinlock.c
minix/lib/: Makefile  enclave-demo.c  keystore-demo.c
minix/lib/acpi/: acpi.c  acpinex_drv.c  acpinex_event.c  meson.build
minix/lib/dmr/: lp.c
minix/lib/klib/: meson.build  meson.build.conceptual_content
minix/lib/libc/: meson.build
minix/lib/libcxxrt/: posix-demo.c
minix/lib/libsys/: cpuavg.c
minix/lib/util/: MAKEDEV.lites  README.md  pfakeether.c  pnetnum.c  random_int.c
minix/llvm/include/: magic_common.h
minix/man/man5/: boot.cfg.5  pkg_install.conf.5
minix/man/man7/: hier.7  pkgsrc.7
minix/man/man8/: boot.8
minix/memory/: alloc.c
minix/misc/: subr.c  tty.c
minix/net/uds/: io.c
minix/servers/arp/: arp_i.h  arp_table.h
minix/servers/bid/: bid.c
minix/servers/bidctl/: bidctl.c
minix/servers/blast/: blast_internal.h  blast_mask64.h  blast_stack.h
minix/servers/chan/: chan.c  chan_client.c  chan_server.c
minix/servers/eth/: eth.c  eth_i.h
minix/servers/ip/: ip_i.h  iproute.c  route.h
minix/servers/machnetipc/: rrx.c  rrx.h  rrx_hdr.c  rrx_i.h  srx.c  xfer.h
minix/servers/pm/: main.c  misc.c  proto.h
minix/servers/ramdiskfs/: Makefile  handle_open.c  handle_readwrite.c  ramdiskfs.h
minix/servers/rat/: rat.h
minix/servers/rs/: main.c  manager.c  type.h
minix/servers/select/: select_common.c  select_i.h
minix/servers/simsimeth/: simsimeth.c
minix/servers/sunrpc/: sunrpc.c  sunrpc_ctl.c
minix/servers/tcp/: tcp_debug.c  tcp_subr.c  tcp_x.c
minix/servers/tcp-tahoe/: sb.h  tcp_internal.h  tcp_output.c  tcp_timer.c
minix/servers/test/: common_test_async.c
minix/servers/udp/: udp.c
minix/servers/vchan/: vchan.c
minix/servers/vfs/: read.c
minix/share/: Makefile
minix/signals/: sig.c
minix/synchronization/: condvar.h  lock.h  semaphore.h
minix/tests/capability/: kunit_stub.h  test_math_posix.c
minix/tests/test_getpid_cap/: Makefile  test_getpid_cap.c
minix/text/: nstr_graph.c  nstr_graph.h
minix/usr.bin/: Makefile
minix/usr.bin/grep/: file.c  grep.h
minix/usr.sbin/btrace/: btrace.c
minix/utilities/: qsort.c
(+2297 files in other folders)
